force-app/main/default/objects/DriveBridgeAPI__x/DriveBridgeAPI__x.object-meta.xml
<CustomObject>
    <externalDataSource>EDS</externalDataSource>
    <externalName>bz_dp_drive_brdg_api</externalName>
    <label>DriveBridgeAPI</label>
    <pluralLabel>DriveBridgeAPI</pluralLabel>
</CustomObject>