force-app/main/default/objects/DriveBridgeAPI__x/fields/apmt_cnt__c.field-meta.xml
<CustomField>
    <fullName>apmt_cnt__c</fullName>
    <description>apmt_cnt</description>
    <externalDeveloperName>apmt_cnt</externalDeveloperName>
    <label>Appointment count</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>