force-app/main/default/objects/DriveBridgeAPI__x/fields/location_external_id__c.field-meta.xml
<CustomField>
    <fullName>location_external_id__c</fullName>
    <description>location_external_id</description>
    <externalDeveloperName>location_external_id</externalDeveloperName>
    <label>Site external id</label>
    <length>9</length>
    <type>Text</type>
</CustomField>